Bump hedera-app to 0.78.0-rc.9 (#14265)
Bump hedera-app to 0.78.0-rc.9. Adapt the gas estimates in the acceptance tests due to the usage of simple fees upstream.

Signed-off-by: Bilyana Gospodinova <bilyana.gospodinova14@gmail.com>